--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -224,7 +224,10 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 project.ext.vectoricons = [
     iconFontNames: [ 
         'Feather.ttf',
-		'FontAwesome.ttf'
+		'FontAwesome.ttf',
+		'FontAwesome5_Brands.ttf',
+		'FontAwesome5_Regular.ttf',
+		'FontAwesome5_Solid.ttf',
      ]
 ]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
