--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
+    "realm": "^10.4.1",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
   },
